--- a/web/index.html
+++ b/web/index.html
@@ -86,6 +86,19 @@
     </div>
   </div>
   
+  <!-- 智能体详情弹窗 -->
+  <div id="agent-detail-modal" class="modal-overlay hidden">
+    <div class="modal-content agent-detail-modal">
+      <div class="modal-header">
+        <h3>智能体详情</h3>
+        <button class="modal-close-btn" title="关闭">&times;</button>
+      </div>
+      <div id="agent-detail-body" class="modal-body">
+        <!-- 智能体详情将通过 JavaScript 动态生成 -->
+      </div>
+    </div>
+  </div>
+  
   <!-- Toast 通知容器 -->
   <div id="toast-container" class="toast-container"></div>
   
@@ -101,6 +114,7 @@
   <script src="js/components/agent-list.js"></script>
   <script src="js/components/chat-panel.js"></script>
   <script src="js/components/message-modal.js"></script>
+  <script src="js/components/agent-detail-modal.js"></script>
   <script src="js/components/overview.js"></script>
   <!-- 主应用 -->
   <script src="js/app.js"></script>
