--- a/web/index.html
+++ b/web/index.html
@@ -99,6 +99,19 @@
     </div>
   </div>
   
+  <!-- 岗位详情弹窗 -->
+  <div id="role-detail-modal" class="modal-overlay hidden">
+    <div class="modal-content role-detail-modal">
+      <div class="modal-header">
+        <h3>岗位详情</h3>
+        <button class="modal-close-btn" title="关闭">&times;</button>
+      </div>
+      <div id="role-detail-body" class="modal-body">
+        <!-- 岗位详情将通过 JavaScript 动态生成 -->
+      </div>
+    </div>
+  </div>
+  
   <!-- Toast 通知容器 -->
   <div id="toast-container" class="toast-container"></div>
   
@@ -115,6 +128,7 @@
   <script src="js/components/chat-panel.js"></script>
   <script src="js/components/message-modal.js"></script>
   <script src="js/components/agent-detail-modal.js"></script>
+  <script src="js/components/role-detail-modal.js"></script>
   <script src="js/components/overview.js"></script>
   <!-- 主应用 -->
   <script src="js/app.js"></script>
