chrome headless 支持

--- a/web/index.html
+++ b/web/index.html
@@ -146,6 +146,7 @@
   <script src="js/components/role-detail-modal.js"></script>
   <script src="js/components/overview.js"></script>
   <script src="js/components/modules-panel.js"></script>
+  <script src="js/components/image-viewer.js"></script>
   <!-- 主应用 -->
   <script src="js/app.js"></script>
 </body>
