大模型接口配置

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
           <button id="view-overview-btn" class="toggle-btn" title="总览视图">🌳</button>
           <button id="view-modules-btn" class="toggle-btn" title="模块管理">🔌</button>
         </div>
+        <button id="open-settings-btn" class="settings-btn" title="LLM 设置">⚙️</button>
         <button id="open-artifacts-btn" class="artifacts-btn" title="工件管理器">📦</button>
       </div>
       
@@ -153,6 +154,7 @@
   <!-- 组件 -->
   <script src="js/components/toast.js"></script>
   <script src="js/components/error-modal.js"></script>
+  <script src="js/components/llm-settings-modal.js"></script>
   <script src="js/components/agent-list.js"></script>
   <script src="js/components/chat-panel.js"></script>
   <script src="js/components/message-modal.js"></script>
