--- a/web/index.html
+++ b/web/index.html
@@ -175,6 +175,7 @@
   <script src="js/components/overview.js"></script>
   <script src="js/components/modules-panel.js"></script>
   <script src="js/components/image-viewer.js"></script>
+  <script src="js/utils/json-parser.js"></script>
   <script src="js/components/json-viewer.js"></script>
   <script src="js/components/text-viewer.js"></script>
   <script src="js/components/artifact-manager.js"></script>
