完善工件展示

--- a/web/index.html
+++ b/web/index.html
@@ -168,7 +168,7 @@
   <script src="js/components/llm-settings-modal.js"></script>
   <script src="js/components/attachment-manager.js"></script>
   <script src="js/components/agent-list.js"></script>
-  <script src="js/components/chat-panel.js"></script>
+  <script type="module" src="js/components/chat-panel.mjs"></script>
   <script src="js/components/message-modal.js"></script>
   <script src="js/components/agent-detail-modal.js"></script>
   <script src="js/components/role-detail-modal.js"></script>
@@ -179,7 +179,7 @@
   <script src="js/components/json-viewer.js"></script>
   <script src="js/components/text-viewer.js"></script>
   <script src="js/components/thumbnail-navigator.js"></script>
-  <script src="js/components/artifact-manager.js"></script>
+  <script type="module" src="js/components/artifact-manager.mjs"></script>
   <!-- 主应用 -->
   <script src="js/app.js"></script>
 </body>
