--- a/web/index.html
+++ b/web/index.html
@@ -154,6 +154,9 @@
   </div>
   
   <!-- JavaScript 文件（按依赖顺序加载） -->
+  <!-- 第三方库 -->
+  <script src="js/lib/marked.min.js"></script>
+  <script src="js/lib/mermaid.min.js"></script>
   <!-- 工具函数 -->
   <script src="js/utils/sort.js"></script>
   <script src="js/utils/filter.js"></script>
