--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
         <div class="view-toggle">
           <button id="view-list-btn" class="toggle-btn active" title="列表视图">📋</button>
           <button id="view-overview-btn" class="toggle-btn" title="总览视图">🌳</button>
+          <button id="view-org-templates-btn" class="toggle-btn" title="组织模板管理">🏗️</button>
           <button id="view-modules-btn" class="toggle-btn" title="模块管理">🔌</button>
         </div>
         <button id="open-settings-btn" class="settings-btn" title="LLM 设置">⚙️</button>
@@ -152,6 +153,57 @@
       <!-- 工件管理器将通过 JavaScript 动态生成 -->
     </div>
   </div>
+
+  <!-- 组织模板管理浮动窗口 -->
+  <div id="org-templates-window" class="artifact-window org-templates-window hidden">
+    <div class="org-templates-panel-header">
+      <div class="org-templates-panel-title">🏗️ 组织模板</div>
+      <div class="org-templates-panel-header-actions">
+        <button id="org-templates-maximize-btn" class="window-btn maximize-btn" title="最大化/还原">⬜</button>
+        <button id="org-templates-close-btn" class="window-btn close-btn" title="关闭">✕</button>
+      </div>
+    </div>
+    <div class="org-templates-panel-body">
+      <div class="org-templates-panel-sidebar">
+        <div class="org-templates-panel-toolbar">
+          <input id="org-templates-panel-search" type="text" placeholder="搜索 orgName / info..." />
+          <button id="org-templates-panel-refresh-btn" class="btn-secondary" type="button">刷新</button>
+        </div>
+        <div id="org-templates-panel-list" class="org-templates-panel-list"></div>
+        <div class="org-templates-panel-create">
+          <input id="org-templates-panel-new-name" type="text" placeholder="orgName（字母数字_-）" />
+          <button id="org-templates-panel-create-btn" class="btn-primary" type="button">新增</button>
+        </div>
+      </div>
+      <div class="org-templates-panel-editor">
+        <div class="org-templates-panel-editor-header">
+          <div>当前：<span id="org-templates-panel-current-name">-</span></div>
+          <div class="org-templates-panel-editor-actions">
+            <button id="org-templates-panel-rename-btn" class="btn-secondary" type="button" disabled>重命名</button>
+            <button id="org-templates-panel-save-all-btn" class="btn-primary" type="button" disabled>保存全部</button>
+            <button id="org-templates-panel-delete-btn" class="btn-danger" type="button" disabled>删除</button>
+          </div>
+        </div>
+        <div class="org-templates-panel-editor-section">
+          <div class="org-templates-panel-editor-section-header">
+            <div class="org-templates-panel-editor-section-title">info.md</div>
+            <button id="org-templates-panel-save-info-btn" class="btn-primary" type="button" disabled>保存</button>
+          </div>
+          <textarea id="org-templates-panel-info-md" rows="10" placeholder="简介（用于匹配）..." disabled></textarea>
+        </div>
+        <div class="org-templates-panel-editor-section">
+          <div class="org-templates-panel-editor-section-header">
+            <div class="org-templates-panel-editor-section-title">org.md</div>
+            <div class="org-templates-panel-editor-section-actions">
+              <button id="org-templates-panel-reload-org-btn" class="btn-secondary" type="button" disabled>重新加载</button>
+              <button id="org-templates-panel-save-org-btn" class="btn-primary" type="button" disabled>保存</button>
+            </div>
+          </div>
+          <textarea id="org-templates-panel-org-md" rows="14" placeholder="完整组织架构内容（提示词）..." disabled></textarea>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <!-- JavaScript 文件（按依赖顺序加载） -->
   <!-- 第三方库 -->
@@ -177,6 +229,7 @@
   <script src="js/components/role-detail-modal.js"></script>
   <script src="js/components/overview.js"></script>
   <script src="js/components/modules-panel.js"></script>
+  <script src="js/components/org-templates-panel.js"></script>
   <script src="js/components/image-viewer.js"></script>
   <script src="js/utils/json-parser.js"></script>
   <script src="js/components/json-viewer.js"></script>
