--- a/web/v2/index.html
+++ b/web/v2/index.html
@@ -6,6 +6,7 @@
   <title>智能体工作台</title>
   <link rel="stylesheet" href="v2.css">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="theme.css">
 </head>
 <body>
   <div id="app" class="app">
@@ -17,6 +18,7 @@
           <button id="sys-artifacts" class="icon-btn" type="button" title="工件">📦</button>
           <button id="sys-templates" class="icon-btn" type="button" title="组织模板">🏗️</button>
           <button id="sys-modules" class="icon-btn" type="button" title="模块">🔌</button>
+          <button id="sys-theme" class="icon-btn" type="button" title="主题">🌓</button>
         </div>
       </div>
       <div class="global-sidebar-body">
