feat(modules): 重构模块管理面板为独立HTML页面并支持iframe嵌入
- 将Chrome、FFmpeg、SSH模块的管理面板重构为完整HTML文档
- 在HTTP服务器中添加模块面板路由支持，当模块返回handled标记时跳过JSON响应
- 移除Vue组件中的动态注入逻辑，改用iframe嵌入模块面板页面
- 简化模块面板JavaScript代码，避免重复声明冲突
- 统一模块面板的加载方式，提高兼容性和维护性

--- a/modules/chrome/web/panel.html
+++ b/modules/chrome/web/panel.html
@@ -1,38 +1,50 @@
-<!-- Chrome 浏览器管理面板 - 适配新框架 -->
-<div class="chrome-panel" id="chrome-panel">
-  <div class="panel-layout">
-    <!-- 左侧：浏览器列表 -->
-    <div class="panel-sidebar">
-      <div class="sidebar-header">
-        <span class="header-title">浏览器实例</span>
-      </div>
-      <div class="browser-list" id="browser-list">
-        <div class="loading-text">加载中...</div>
-      </div>
-    </div>
-
-    <!-- 右侧：标签页和截图 -->
-    <div class="panel-content">
-      <!-- 标签页列表 -->
-      <div class="content-section">
-        <div class="section-header">
-          <span class="header-title">标签页</span>
-          <span class="header-subtitle" id="tab-count"></span>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chrome 浏览器管理</title>
+  <link rel="stylesheet" href="panel.css">
+</head>
+<body>
+  <div class="chrome-panel" id="chrome-panel">
+    <div class="panel-layout">
+      <!-- 左侧：浏览器列表 -->
+      <div class="panel-sidebar">
+        <div class="sidebar-header">
+          <span class="header-title">浏览器实例</span>
         </div>
-        <div class="tab-list" id="tab-list">
-          <div class="empty-text">请选择一个浏览器实例</div>
+        <div class="browser-list" id="browser-list">
+          <div class="loading-text">加载中...</div>
         </div>
       </div>
 
-      <!-- 截图预览 -->
-      <div class="content-section screenshot-section">
-        <div class="section-header">
-          <span class="header-title">截图预览</span>
+      <!-- 右侧：标签页和截图 -->
+      <div class="panel-content">
+        <!-- 标签页列表 -->
+        <div class="content-section">
+          <div class="section-header">
+            <span class="header-title">标签页</span>
+            <span class="header-subtitle" id="tab-count"></span>
+          </div>
+          <div class="tab-list" id="tab-list">
+            <div class="empty-text">请选择一个浏览器实例</div>
+          </div>
         </div>
-        <div class="screenshot-container" id="screenshot-container">
-          <div class="empty-text">请选择一个标签页</div>
+
+        <!-- 截图预览 -->
+        <div class="content-section screenshot-section">
+          <div class="section-header">
+            <span class="header-title">截图预览</span>
+          </div>
+          <div class="screenshot-container" id="screenshot-container">
+            <div class="empty-text">请选择一个标签页</div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+  <script src="panel.js"></script>
+</body>
+</html>
