fix(web): 修正跳转链接中的路径前缀
更新 index.html 中自动刷新和手动链接的 URL，从相对路径改为包含 /web/ 前缀的绝对路径，确保在部署环境下能正确跳转到目标页面。

--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>智能体工作台</title>
-  <meta http-equiv="refresh" content="0; url=v3/dist/index.html">
+  <meta http-equiv="refresh" content="0; url=/web/v3/dist/index.html">
 </head>
 <body>
   <div style="padding:16px;font-family:system-ui,Segoe UI,Arial;">
     正在跳转到新界面…
     <div style="margin-top:8px;">
-      <a href="v3/dist/index.html">打开智能体工作台</a>
+      <a href="/web/v3/dist/index.html">打开智能体工作台</a>
     </div>
   </div>
 </body>
