feat(localfile): 添加创建目录功能
- 新增 localfile_create_dir 工具，支持递归创建目录
- 在操作日志中记录创建目录事件并添加对应的样式
- 更新前端界面，在操作筛选器中添加创建目录选项
- 在文档中说明创建目录功能的使用方法和参数

--- a/modules/localfile/web/panel.html
+++ b/modules/localfile/web/panel.html
@@ -57,6 +57,7 @@
             <option value="read">读取</option>
             <option value="write">写入</option>
             <option value="list">列目录</option>
+            <option value="create_dir">创建目录</option>
             <option value="copy_to_workspace">复制到工作区</option>
             <option value="copy_from_workspace">从工作区复制</option>
             <option value="check_permission">权限检查</option>
